# learn-cmake

./: README.md
01-envs/: CMakeLists.txt  Makefile  record.md
02-base_command/: 01-message.cmake  02-set.cmake  03-lsit.cmake  04-branch.cmake  05-foreach.cmake  06-func.cmake  07-macro.cmake
03-simple_project/: CmakeLists.txt  build.bat  main.cpp
03-simple_project/animal/: dog.h
04-second_project/: CmakeLists.txt  build.sh  gen.bat  gen.ps1  main.cpp
04-second_project/animal/: animal.cmake  cat.cpp  dog.cpp
05-third_project/: CmakeLists.txt  main.cpp
05-third_project/animal/: CmakeLists.txt
06-fourth_project/: CmakeLists.txt  build.bat
06-fourth_project/animal/: CmakeLists.txt
07-gen_lib_project/: CmakeLists.txt  build.bat
08-use_lib_project/: CmakeLists.txt  build.bat  main.cpp
08-use_lib_project/include/: cat.h
09-final_project/: CMakeLists.txt  gen.ps1
09-final_project/src/: main.cpp
09-multi_file_lib_project/: CMakeLists.txt
09-multi_file_lib_project/src/: hello.cpp
10-large_project/: CMakeLists.txt  gen.ps1
10-large_project/.cache/clangd/index/: hello.cpp.7A88A5F835A88E73.idx  hello.h.5FA8CF008FDDE6E9.idx  hello1.cpp.837B2B900231BAAA.idx  hello1.h.6C8D82C4E96BB434.idx  main.cpp.66A65EA64870077D.idx
10-large_project/src/: CMakeLists.txt  main.cpp
10-large_project/src/draw/: draw.cpp  draw.h
10-large_project/src/module0/: CMakeLists.txt  hello.cpp  hello.h
10-large_project/src/module1/: CMakeLists.txt  hello1.cpp  hello1.h
